syntax = "proto3";

option csharp_namespace = "PrimeServerService.Generated";

package proto;

// The greeting service definition.
service ServerService {
  // Sends a greeting
  rpc ReceiveRequest (ServerRequest) returns (ServerResponse){};
}

message ServerRequest {
	int64 id = 1;
	int64 timestamp = 2;
	int64 number = 3 ;
}

message ServerResponse
{
	bool isPrime = 4;
}

// The request message containing the user's name.
//message HelloRequest {
//  string name = 1;
//}

// The response message containing the greetings.
//message HelloReply {
//  string message = 1;
//}